@startuml Event Sourced service - Synchronous API

!include styling.puml

interface IEquatable<Entity> 
interface IEntity 
interface IAggregateRoot 
class Entity 
class AggregateRoot 
class Contract 

AggregateRoot <|-- Contract
Entity <|-- AggregateRoot
IAggregateRoot <|-- AggregateRoot
IEquatable <|-- IEntity
IEntity <|-- Entity
IEntity <|-- IAggregateRoot

@enduml